--- a/index.html
+++ b/index.html
@@ -1,11 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    Hello, World
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
+    <script src="https://kit.fontawesome.com/77d92f131e.js" crossorigin="anonymous"></script>
+    <!-- displays site properly based on user's device -->
+
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+
+    <title>Huddle</title>
+
+  </head>
+  <body>
+    <section class="main">
+      <div class="main-logo">
+        <img src="images/logo.svg" alt="logo de Huddle">
+      </div>
+      <div class="main-container">
+        <div class="main-image">
+          <a href="https://imgur.com/p5mjAyz">
+            <img src="https://imgur.com/p5mjAyz.png" alt="">
+          </a>
+        </div>
+        <div class="main-content">
+          <h1>Build The Community <br> Your Fans Will Love</h1>
+          <p>Huddle re-imagines the way we build communities. You have <br> a voice, but so does your audience. Create connections with <br> your users as you engage in genuine discussion.<p>
+          <div class="btn"><button>Register</button></div>
+        </div>
+      </div>
+    </section>
+    <section class="social-section">
+      <div class="social-container">
+        <div class="socialNetwork">
+          <i class="fa fa-facebook"></i>
+          <i class="fab fa-twitter"></i>
+          <i class="fab fa-instagram"></i>
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
