resposive design done

--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;800&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/77d92f131e.js" crossorigin="anonymous"></script>
@@ -21,7 +20,7 @@
 
   </head>
   <body>
-    <section class="main">
+    <!-- <section class="main"> -->
       <div class="main-logo">
         <img src="images/logo.svg" alt="logo de Huddle">
       </div>
@@ -32,7 +31,7 @@
           </a>
         </div>
         <div class="main-content">
-          <h1>Build The Community <br> Your Fans Will Love</h1>
+          <h1>Build The Community <br class="br-title"> Your Fans Will Love</h1>
           <p>Huddle re-imagines the way we build communities. You have <br> a voice, but so does your audience. Create connections with <br> your users as you engage in genuine discussion.<p>
           <div class="btn"><button>Register</button></div>
         </div>
