--- a/index.html
+++ b/index.html
@@ -21,30 +21,32 @@
   </head>
   <body>
     <!-- <section class="main"> -->
-      <div class="main-logo">
-        <img src="images/logo.svg" alt="logo de Huddle">
-      </div>
-      <div class="main-container">
-        <div class="main-image">
-          <a href="https://imgur.com/p5mjAyz">
-            <img src="https://imgur.com/p5mjAyz.png" alt="">
-          </a>
+      <div class="container">
+        <div class="main-logo">
+          <img src="images/logo.svg" alt="logo de Huddle">
         </div>
-        <div class="main-content">
-          <h1>Build The Community <br class="br-title"> Your Fans Will Love</h1>
-          <p>Huddle re-imagines the way we build communities. You have <br> a voice, but so does your audience. Create connections with <br> your users as you engage in genuine discussion.<p>
-          <div class="btn"><button>Register</button></div>
+        <div class="main-container">
+          <div class="main-image">
+            <a href="https://imgur.com/p5mjAyz">
+              <img src="https://imgur.com/p5mjAyz.png" alt="">
+            </a>
+          </div>
+          <div class="main-content">
+            <h1>Build The Community <br class="br-title"> Your Fans Will Love</h1>
+            <p>Huddle re-imagines the way we build communities. You have <br> a voice, but so does your audience. Create connections with <br> your users as you engage in genuine discussion.<p>
+            <div class="btn"><button>Register</button></div>
+          </div>
         </div>
-      </div>
-    </section>
-    <section class="social-section">
-      <div class="social-container">
-        <div class="socialNetwork">
-          <i class="fa fa-facebook"></i>
-          <i class="fab fa-twitter"></i>
-          <i class="fab fa-instagram"></i>
+      </section>
+      <section class="social-section">
+        <div class="social-container">
+          <div class="socialNetwork">
+            <i class="fa fa-facebook"></i>
+            <i class="fab fa-twitter"></i>
+            <i class="fab fa-instagram"></i>
+          </div>
         </div>
+      </section>
       </div>
-    </section>
   </body>
 </html>
